--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,27 @@
   <div class="header-container">
     <nav class="nav">
       <div id="home-container">
-        <a class="home nav-link" href="/">Home</a>
+        <a class="home nav-link" href="/">index</a>
       </div>
       <ul>
-        <li><a class="nav-link" href="/publications.html">Publications</a></li>
+        <li><a class="nav-link" href="/blog.html">blog</a></li>
+<!--
         <li><a class="nav-link" href="/static/cv.pdf">CV</a></li>
+-->
       </ul>
     </nav>
   </div>
 </header>
 <main><p><img src="./static/photo.jpg" id="photo" /></p>
-<h3 id="name">Andre Goderich 郭育賢</h3>
-<p><style> p { text-align: center; } </style> I am an associate
-professor of linguistics in the Department of English, National Changhua
-University of Education. My <a href="./publications.html">research</a>
-mainly concerns the Atayal language in various aspects, including its
-historical development and synchronic phonology.</p>
+<h3 id="name">Matthew N. Czuba 楚孟修</h3>
+<p><style> p { text-align: center; } </style> My name is Matthew Czuba,
+and this is my website. That statement will be more convincing when I
+have more than 30 words on said website, and those words are coming.
+What's more, the local buzz dictates that there is a <a
+href="./blog.html">blog</a> a-brewin'.</p>
 </main><footer>
-  Crafted by hand using
+ this site forked from one crafted by hand by my fine friend
+  <a href="https://goderich.tw/">Andre Goderich</a> using
   <a href="https://babashka.org/">Babashka</a>,
   <a href="https://www.gnu.org/software/emacs/">Emacs</a>,
   and <a href="https://pandoc.org/index.html">Pandoc</a>
